
Version 0.3
-----------
API Additions
- Added support for Write Concerns
- Added a DocumentCompatibilityInterface, which allows non-Document objects
  to declare compatibility with the Vultan Document model
- If a 'collection' key is set on a Document, this will be used as the
  Document's collection (but not set when writing data)

API Changes
- Database::filterID() has been changed to Database::createFilterMongoID()
- Config::setDb() is now Config::setDatabase()
- Config::init() is now Config::create()
- Document::getValues() is now Document::getProperties(), for consistency

Bugfixes
- Fixed an issue where MongoID objects would not reliably return an ID
- Fixed an issue where an invalid or empty collection name would throw an
  unexpected and badly explained Exception