@@ -9,6 +9,8 @@ API Additions
   Document's collection (but not set when writing data)
 
 API Changes
+- It is no longer necessary to call Vultan::connect(), as this happens
+  automatically.
 - Database::filterID() has been changed to Database::createFilterMongoID()
 - Config::setDb() is now Config::setDatabase()
 - Config::init() is now Config::create()
